objects/Channel_Partner_Authorization__c.object
<CustomObject>
    <fields>
        <fullName>Existing_company_certifications__c</fullName>
        <inlineHelpText>List company certifications like &apos;Certified by a quality system (ISO9000)*&apos;</inlineHelpText>
        <label>Existing company certifications</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_control__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Rules and Process known for early notifications if/when working on opportunities under export control</inlineHelpText>
        <label>Export control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_up_and_update_the_On_site_Audit__c</fullName>
        <defaultValue>$Label.Follow_up_Default_Value</defaultValue>
        <inlineHelpText>Audit Actions to be completed and renewed</inlineHelpText>
        <label>Follow up</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Guide_of_Businesss_Unit_responsibles__c</fullName>
        <defaultValue>&quot;http://inside.abb.com/AbbLibrary/DownloadCenter/?CategoryID=Root&amp;View=Result&amp;QueryText=9AKK106930A6961&amp;SortBy=Score&amp;SearchIn=DocNum&amp;CountryCode=*&amp;AdditionalLanguage=en&quot;</defaultValue>
        <label>Guide of Businesss Unit responsibles</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Implementation_process_introduced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Implementation process introduced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Info_on_Step_5_for_Contacts_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Info on Step 5 for Contacts Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instructions_can_be_found_on__c</fullName>
        <defaultValue>&quot;http://inside.abb.com/cawp/gad00051/764c9f90b2e910eec1257a77004144f3.aspx&quot;</defaultValue>
        <description>R7A - Channel Authorization</description>
        <label>Instructions can be found on</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Engg_required_to_initiate_Approval__c</fullName>
        <formula>AND(OR(INCLUDES(Channel_Class__c, &quot;System Integrator&quot;),INCLUDES(Channel_Class__c, &quot;Panel Builder&quot;),INCLUDES(Channel_Class__c, &quot;Original Equipment Manufacturer&quot;)),RecordType.Name=&quot;AVP Authorization Process&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Engg required to initiate Approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Sales_required_to_initiate_Approval__c</fullName>
        <formula>AND(OR(INCLUDES(Channel_Class__c, &quot;Distributor&quot;),INCLUDES(Channel_Class__c, &quot;Technical Distributor&quot;),INCLUDES(Channel_Class__c, &quot;System Integrator&quot;)), (RecordType.DeveloperName =&quot;AVP_Authorization_Process&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Sales required to initiate Approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Service_required_to_initiate_Approval__c</fullName>
        <formula>AND(INCLUDES(Channel_Class__c, &quot;Service Provider&quot;),(RecordType.DeveloperName =&quot;AVP_Authorization_Process&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Service required to initiate Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Support_required_to_initiate_Approval__c</fullName>
        <formula>AND(OR(INCLUDES(Channel_Class__c, &quot;Technical Distributor&quot;), INCLUDES(Channel_Class__c, &quot;System Integrator&quot;),  INCLUDES(Channel_Class__c, &quot;Service Provider&quot;), INCLUDES(Channel_Class__c, &quot;Panel Builder&quot;)), (RecordType.DeveloperName =&quot;AVP_Authorization_Process&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Support required to initiate Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_User_the_Authorization_Audit_Owner__c</fullName>
        <description>R7A - This field is used for Authorization reporting. Checks if the Logged in user is the Authorization/Audit Owner.</description>
        <formula>IF ($User.Id == Authorization_Audit_Owner__c , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is User the Authorization/Audit Owner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_User_the_Authorization_Owner__c</fullName>
        <description>R7A - This field is used for Authorization reporting. Checks if the Logged in user is the Authorization Owner</description>
        <formula>IF ($User.Id ==   OwnerId , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is User the Authorization Owner ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_User_the_Channel_Agreement_Owner__c</fullName>
        <description>R7A - This field is used for Authorization reporting. Checks if the Logged in user is the Channel Agreement Owner</description>
        <formula>IF ($User.Id == Channel_Agreement_Owner__c, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is User the Channel Agreement Owner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_impact__c</fullName>
        <defaultValue>$Label.Legal_Impact_Default_Value</defaultValue>
        <label>Legal impact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_Business_Plan_active__c</fullName>
        <formula>ISPICKVAL( Channel_Partner_Business_Plan__r.Status__c,&quot;Active&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Linked Business Plan active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_legal_responsibilities__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ensured that all local legal responsibilities are followed</inlineHelpText>
        <label>Local legal responsibilities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loyalty__c</fullName>
        <description>R7A - Channel Authorization</description>
        <label>Loyalty</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Coverage_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the market coverage for this authorization is reviewed.</inlineHelpText>
        <label>Market Coverage Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Scope_Authorized_AVP__c</fullName>
        <formula>Channel_Partner_Market_Scope__r.Authorized_AVP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Scope Authorized AVP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Scope_Strategic__c</fullName>
        <formula>Channel_Partner_Market_Scope__r.Authorized_Strategic__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Scope Strategic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>More_Migrated_Information__c</fullName>
        <inlineHelpText>Various information migrated from the 3SN databse</inlineHelpText>
        <label>More Migrated Information</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NDA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>NDA signed, scanned and attached below</inlineHelpText>
        <label>NDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Antitrust_issues__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Local legal office has confimed that there are no anti trust issues</inlineHelpText>
        <label>No Antitrust issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>R7A - Channel Authorization</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_AVP_Valid_Until__c</fullName>
        <description>R7A - Channel Authorization Migration</description>
        <inlineHelpText>used to capture which was the Valid Until Date when the Contract has been migrated to Salesforce.com from 3SN</inlineHelpText>
        <label>Old AVP Valid Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Only_BU_responsibles_can_generate__c</fullName>
        <defaultValue>&quot;Please note that only Business Unit responsibles may generate the Certificates for this process.&quot;</defaultValue>
        <label>Only BU responsibles can generate!</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onsite_Notes__c</fullName>
        <inlineHelpText>Additional notes</inlineHelpText>
        <label>Onsite Notes</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Base_URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
        <label>Org Base URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_priority_class__c</fullName>
        <description>R7A - Channel Authorization</description>
        <label>Overall priority class</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PG_s_Covered__c</fullName>
        <globalPicklist>Product_Group</globalPicklist>
        <label>PG&apos;s Covered</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Partner_ABB_content_linked_to_abb_com__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the partner web page promote ABB products and partnership and is linked back to www.abb.com (ABB product guide)</inlineHelpText>
        <label>Partner ABB content linked to abb.com</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Approval_for_abb_com_visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R7A - Channel Authorization</description>
        <label>Partner Approval for abb.com visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <description>R7A - Channel Authorization</description>
        <label>Partner Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>People_Authorized_by_Training__c</fullName>
        <description>R7A</description>
        <inlineHelpText>Transfer of Technology Training. As appropriate according to your BU&apos;s specific requirements/instructions.</inlineHelpText>
        <label>ToT Training completed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>People_to_be_authorized_added_as_contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Relevant partner persons have been added as contacts</inlineHelpText>
        <label>People to be authorized added as contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_approval_check_list__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Attach checklist below and check this box once done</inlineHelpText>
        <label>Scope check list completed and attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preliminary_Onsite_audit_review_prototy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Depending on the cooperation. Use the standard onsite audit check list</inlineHelpText>
        <label>Preliminary Onsite audit/ review prototy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_Authorization_Certificate__c</fullName>
        <formula>HYPERLINK(&quot;/apex/Apttus__DocumentGenerate?id=&quot;&amp;Id &amp; &quot;&amp;action=Generate_Document&amp;templateType=Channel Partner Authorizations&quot;, IMAGE(&quot;/resource/Apttus__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Can only be generated by BU responsible person</inlineHelpText>
        <label>Print Authorization Certificate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_Backup2__c</fullName>
        <label>Product Group Backup2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Group_Backup__c</fullName>
        <description>Backup field to save existing value. STS R3.0</description>
        <inlineHelpText>Backup field to save existing value. STS R3.0</inlineHelpText>
        <label>Product Group Backup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Lines__c</fullName>
        <label>Product Lines</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added 9AAC173882 value in lookup filter for BR 4461</description>
        <inlineHelpText>Pick value under which this authorization is published on ABB.com. If all your product lines do not match under the same option, you must create several authorization records to get the company listed under all relevant options.</inlineHelpText>
        <label>Product Family</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Product2.CID__c</field>
                <operation>contains</operation>
                <value>9AAC100211,9AAC133417,9AAC173060,9AAC910002,9AAC910019,9AAC100085,9AAC720001,9AAC166913,9AAC910006,9AAC30405217,9AAC710009,9AAC710003,9AAC710047,9AAC710006,9AAC124845,9AAC750000,9AAC910029,9AAC171541,9AAC177033,9AAC910011,9AAC173882</value>
            </filterItems>
            <filterItems>
                <field>$User.DisabledLookupFilterMode__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Channel Partner Authorizations</relationshipLabel>
        <relationshipName>Channel_Partner_Authorizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_presentated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark when relevant program presentation is given to the partner candidate.</inlineHelpText>
        <label>Program presented</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_on_abb_com_Mainswitch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R7A - Channel Authorization
Used by integration whether AUthorization should be published or not.</description>
        <inlineHelpText>This checkbox controls if the authorization information will be possible to publish on abb.com or not. If this is not activated, no information will be published on ABB.com, independent of any approved publishing requests below.</inlineHelpText>
        <label>Publish on abb.com Mainswitch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_for_publishing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for publishing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Status__c</fullName>
        <description>R7A - Channel Authorization</description>
        <inlineHelpText>Shows the current record status. Authorization is only valid once the status is Active</inlineHelpText>
        <label>Record Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region_Code__c</fullName>
        <description>R7A - Channel Authorization</description>
        <label>Region Code</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <label>Region Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <inlineHelpText>The reason for rejecting this authorization</inlineHelpText>
        <label>Rejected Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Company not interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not full fill must have requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other candidate chosen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too low business impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not aligned with ABB strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other reason, see comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created in error</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relevant_Co_operation_program__c</fullName>
        <inlineHelpText>Choose the relevant co-operation programs</inlineHelpText>
        <label>Relevant Co-operation program</label>
        <picklist>
            <picklistValues>
                <fullName>Technical cooperation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial cooperation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trandemark cooperation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relevant_on_site_audits_In_approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The requested Sales, Support, Service and/or Engineering -check lists connected below are in &quot;in approval&quot; -mode. The lists needed are based on channel class(es) to be included in authorization.</inlineHelpText>
        <label>Relevant on-site Audits &quot;In approval&quot;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relevant_onsite_audits_in_in_approval__c</fullName>
        <description>R7A - Channel Authorization Process</description>
        <formula>IF (Is_Sales_required_to_initiate_Approval__c, Sales_Onsite_Audit_Count__c &gt; 0, TRUE) &amp;&amp; 
IF (Is_Service_required_to_initiate_Approval__c, Service_Onsite_Audit_Count__c &gt; 0, TRUE) &amp;&amp; IF (Is_Support_required_to_initiate_Approval__c, Support_Onsite_Audit_Count__c &gt; 0, TRUE) &amp;&amp; 
IF (Is_Engg_required_to_initiate_Approval__c, Engineering_Onsite_Audit_Count__c &gt; 0, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The requested Sales, Support, Service and/or Engineering -checklists connected below are completed. The checklists needed are based on channel class(es) to be included in authorization.</inlineHelpText>
        <label>Relevant onsite audits &quot;completed&quot;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Partner_info_in_abb_com__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Review of how the partner company will be presented in abb.com after signing the TLA</inlineHelpText>
        <label>Review Partner info in abb.com</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Review__c</fullName>
        <inlineHelpText>Follow ABB processes if Risk Review is expected</inlineHelpText>
        <label>Risk Review</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Relevant</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Root_Account_GUID__c</fullName>
        <formula>Account__r.Root_Account_GUID__c</formula>
        <label>Root Account GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Onsite_Audit_Count__c</fullName>
        <description>R7A - Channel Authorization</description>
        <label>Sales Onsite Audit Count</label>
        <summaryFilterItems>
            <field>Channel_Partner_on_site_Audit__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sales</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Channel_Partner_on_site_Audit__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Channel_Partner_on_site_Audit__c.Channel_Partner_Authorization__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <formula>IF(Sales_Onsite_Audit_Count__c &lt;=0 &amp;&amp; Is_Sales_required_to_initiate_Approval__c ,IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Audit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_Notes__c</fullName>
        <label>Scope Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Onsite_Audit_Count__c</fullName>
        <label>Service Onsite Audit Count</label>
        <summaryFilterItems>
            <field>Channel_Partner_on_site_Audit__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Service</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Channel_Partner_on_site_Audit__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Channel_Partner_on_site_Audit__c.Channel_Partner_Authorization__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <formula>IF (Service_Onsite_Audit_Count__c &lt;=0 &amp;&amp; Is_Service_required_to_initiate_Approval__c,IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Audit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_of_Documents__c</fullName>
        <label>Status of Documents</label>
        <picklist>
            <picklistValues>
                <fullName>Generated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received and Uploaded</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Step5_of_Completeness__c</fullName>
        <formula>IF (RecordType.Name == &apos;AVP Authorization Process&apos;, (IF(ISNULL(AVP_activated__c),0,1) + IF(ISNULL(Authorization_Audit_End_Date__c),0,1)) /2, 
IF (RecordType.Name == &apos;Strategic Co-Operation Authorization Process&apos;, (IF(ISNULL(Authorization_activated__c),0,1)+ 
IF(ISNULL(Authorization_Audit_End_Date__c),0,1)+IF(ISBLANK(TEXT(Training_program_s_Performed__c)) || ISBLANK(TEXT(People_Authorized_by_Training__c)),0,1)+IF(ISBLANK(TEXT(Technology_transfer_done__c)),0,1) 
+IF(ISBLANK(TEXT(Completed_onsite_Audit_Prototype_Review__c)),0,1)+IF(Authorization_Audit_Owner__c == NULL,0,1))/6,0))</formula>
        <label>Step 5: % of Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Step_1_of_Completeness__c</fullName>
        <formula>IF (RecordType.Name == &apos;AVP Authorization Process&apos;, 
(IF(IsBlank(Channel_Class__c),0,1 )+IF(NDA__c, 1, 0) + IF (Code_Of_Conduct__c, 1, 0) + IF((End_Period_Business_Review_Completed__c || Channel_Pre_Qualification_completed__c ),1, 0) + IF (Targeted_Products_Defined__c, 1, 0) + IF (People_to_be_authorized_added_as_contact__c, 1, 0) + IF (Local_legal_responsibilities__c, 1, 0) + IF (Due_Diligence__c, 1, 0) + IF (No_Antitrust_issues__c, 1, 0) + IF (Export_control__c, 1, 0))/10, 
IF (RecordType.Name == &apos;Strategic Co-Operation Authorization Process&apos;,( IF (Pre_approval_check_list__c, 1, 0) +IF( INCLUDES(Targeted_Program__c,&apos;Technical Cooperation&apos;) || INCLUDES(Targeted_Program__c,&apos;Commercial Cooperation&apos;) || INCLUDES(Targeted_Program__c,&apos;Trademark Cooperation&apos;) || INCLUDES(Targeted_Program__c,&apos;Technical Support&apos;) || INCLUDES(Targeted_Program__c,&apos;Technical License&apos;) , 1, 0))/2, 0 ))</formula>
        <label>Step 1: % of Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Step_2_of_Completeness_Per__c</fullName>
        <description>R7A</description>
        <formula>IF (RecordType.Name == &apos;AVP Authorization Process&apos;, (IF (Business_Plan_Activated__c, 1, 0) + IF (ISBLANK(TEXT(Training_program_s_Performed__c)),0,1) + IF (Tools_and_databases_access__c, 1, 0) + IF (Channel_Agreement_attached_below__c, 1, 0) + IF(Channel_Agreement_Owner__c == NULL,0,1) +
If(ISNULL(Channel_Agreement_Start_Date__c),0,1) + If(ISNULL(Channel_Agreement_end_date__c),0,1)) /7,
IF (RecordType.Name == &apos;Strategic Co-Operation Authorization Process&apos;, ( IF(NDA__c, 1, 0) + IF(Market_Coverage_Defined__c,1,0) + IF(Business_planning_started__c,1,0) + IF(Targeted_Products_Defined__c,1,0)+ IF(ISBLANK(TEXT(Tool_for_technical_Cooperations__c)),0,1) + IF(Approval_check_list__c,1,0)  +
IF (Due_Diligence__c, 1, 0) + IF (No_Antitrust_issues__c, 1, 0) + IF(ISBLANK(TEXT(Risk_Review__c)),0,1)) / 9, 0))</formula>
        <label>Step 2: % of Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Step_2_of_Completeness__c</fullName>
        <label>Step 2: % of Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Step_3_of_Completeness__c</fullName>
        <description>R7A - To calculate the Step 3 percentage of completion on Channel Partner Authorization.</description>
        <formula>IF (RecordType.Name == &apos;AVP Authorization Process&apos;, (IF (Code_of_conduct_followed__c,1,0) + IF(Confidentiality_followed__c,1,0) + IF(Company_contacts_in_SFDC_up_to_date__c,1,0) + IF(Review_Partner_info_in_abb_com__c,1,0) + IF(ABB_visual_identity_rules__c,1,0) + IF(Info_on_Step_5_for_Contacts_Validated__c,1,0) + IF(TLA_instructions_known__c,1,0) + IF( Relevant_onsite_audits_in_in_approval__c,1,0) + IF(Certificate_Signature_1__c == NULL,0,1))/9,
IF (RecordType.Name == &apos;Strategic Co-Operation Authorization Process&apos;, (IF(Code_Of_Conduct__c,1,0) + IF(Program_presentated__c,1,0) + IF(Business_Plan_Activated__c,1,0) + IF(Contract_Templates_Approved_in_Country__c,1,0)) /4, IF (RecordType.Name == &apos;Country driven Authorization&apos; || RecordType.Name == &apos;Closed Country Driven&apos;,IF(All_Local_Information_provided__c, 1, 0), 0)))</formula>
        <label>Step 3: % of Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
</CustomObject>